# toolbox-edu

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
public/: index.html
server/: api.py  ddfdsf.py  main.py  pyproject.toml
server/templates/: evaluate_essay_form.html
src/: App.tsx  Layout.tsx  util.ts
src/components/: Navbar.tsx  Sidebar.tsx
src/pages/: Home.tsx  assessment.tsx  essay.tsx  lessonplan.tsx
src/scss/: main.scss  other.scss
