[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Shivam <47765144+shivamCode0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"
flask = "^3.0.0"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
